# ztml

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
benchmarks/: bench.py
crates/zhtml-core/: Cargo.toml
crates/zhtml-core/src/: css.rs  lib.rs  render.rs  script.rs
crates/zhtml-python/: Cargo.toml
crates/zhtml-python/src/: css.rs  elements.rs  overrides.rs  render.rs  script.rs
crates/ztml-core/: Cargo.toml
crates/ztml-core/src/: element.rs  render.rs
crates/ztml-python/: Cargo.toml  build.rs
crates/ztml-python/src/: css.rs  enums.rs  lib.rs  overrides.rs  render.rs  script.rs
docs/: examples.md  index.md
docs/guide/: components.md  css.md  html.md  js.md
docs/reference/: enums.md  security.md
docs/server/: forms.md  realtime.md  routing.md  sessions.md
docs/stylesheets/: extra.css
examples/: auth_app.py  components.py  counter_server.py  index.html  notebook_demo.ipynb  sse_clock.py  static_page.py  todo_server.py  ws_chat.py
guide/components/: index.html
guide/css/: index.html
guide/html/: index.html
guide/js/: index.html
reference/enums/: index.html
reference/security/: index.html
search/: search_index.json
server/forms/: index.html
server/realtime/: index.html
server/routing/: index.html
server/sessions/: index.html
specs/: webtags.json
tests/: test_css.py  test_css_constants.py  test_elements.py  test_render.py  test_script.py  test_server.py
zhtml/: __init__.py  server.py
ztml/: __init__.py  scripts.py  server.py
ztml/_core/: __init__.pyi
