[package]
name = "ztml-python"
version = "0.2.0"
edition = "2024"

[lib]
name = "ztml"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
indexmap = "2.13.0"
ztml-core = { version = "0.2.0", path = "../ztml-core" }
pyo3 = { version = "0.28.2", features = ["multiple-pymethods"] }
pyo3-stub-gen = { version = "0.19.0", default-features = false }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = "3.2.0"

